@@ -323,6 +323,8 @@ module ActiveRecord
           when String
             if column && column.type == :binary
               "'#{quote_string(column.string_to_binary(value))}'" # ' (for ruby-mode)
+            elsif column && [:integer, :float].include?(column.type)
+              value.to_s
             else
               "'#{quote_string(value)}'" # ' (for ruby-mode)
             end
