@@ -21,4 +21,6 @@ DROP TABLE authors;
 DROP TABLE tasks;
 DROP TABLE categories;
 DROP TABLE categories_posts;
+DROP TABLE fk_test_has_pk;
+DROP TABLE fk_test_has_fk;
 
